--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -1106,6 +1106,11 @@ molecule_vms_test:
     - *vms_ignore_rule
     - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION
       when: on_success
+    - if: $CI_MERGE_REQUEST_IID
+    - if: $CI_OPEN_MERGE_REQUESTS
+      when: never
+    - if: $CI_COMMIT_BRANCH
+      when: manual
   variables:
     MOLECULE_SCENARIO: vms
   dependencies:
