--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -1100,7 +1100,7 @@ molecule_vms_create:
     - if: $CI_OPEN_MERGE_REQUESTS
       when: never
     - if: $CI_COMMIT_BRANCH
-      when: manual
+      when: always
   variables:
     MOLECULE_SCENARIO: vms
 
