--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -580,22 +580,22 @@ pre_release_cluster_agent_image:
 
 .v2_merge_train_common: &v2_merge_train_common
   - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_MERGE_REQUEST_IID
-    when: manual
+    when: on_success
     allow_failure: true
   - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_OPEN_MERGE_REQUESTS
     when: never
   - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_COMMIT_BRANCH
-    when: manual
+    when: on_success
     allow_failure: true
 
 .merge_train_common: &merge_train_common
   - if: $CI_MERGE_REQUEST_IID
-    when: manual
+    when: on_success
     allow_failure: true
   - if: $CI_OPEN_MERGE_REQUESTS
     when: never
   - if: $CI_COMMIT_BRANCH
-    when: manual
+    when: on_success
     allow_failure: true
 
 # Merge train rules for agent v2
@@ -606,7 +606,14 @@ pre_release_cluster_agent_image:
   - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_MERGE_REQUEST_EVENT_TYPE == "merge_train"
     when: always
     allow_failure: false
-  - *v2_merge_train_common
+  - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_MERGE_REQUEST_IID
+    when: manual
+    allow_failure: true
+  - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_OPEN_MERGE_REQUESTS
+    when: never
+  - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_COMMIT_BRANCH
+    when: manual
+    allow_failure: true
 
 .v2_merge_train_on_success: &v2_merge_train_on_success
   - if: ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master")
@@ -634,7 +641,14 @@ pre_release_cluster_agent_image:
   - if: $CI_MERGE_REQUEST_EVENT_TYPE == "merge_train"
     when: always
     allow_failure: false
-  - *merge_train_common
+  - if: $CI_MERGE_REQUEST_IID
+    when: manual
+    allow_failure: true
+  - if: $CI_OPEN_MERGE_REQUESTS
+    when: never
+  - if: $CI_COMMIT_BRANCH
+    when: manual
+    allow_failure: true
 
 .merge_train_on_success: &merge_train_on_success
   - if: ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master")
@@ -894,8 +908,7 @@ beest_kubernetes_create:
   <<: *beest_kubernetes_variables
   rules:
     - *kubernetes_ignore_rule
-    - *cluster_agent
-    - when: never
+    - *v2_merge_train_always
 
 beest_kubernetes_test:
   <<: *beest
@@ -903,7 +916,7 @@ beest_kubernetes_test:
   <<: *beest_kubernetes_variables
   rules:
     - *kubernetes_ignore_rule
-    - *cluster_agent
+    - *v2_merge_train_on_success
     - when: never
   dependencies:
     - beest_kubernetes_create
@@ -918,7 +931,7 @@ beest_kubernetes_failure_cleanup:
   <<: *beest_kubernetes_variables
   rules:
     - *kubernetes_ignore_rule
-    - *cluster_agent_on_failure
+    - *v2_merge_train_on_failure
     - when: never
   needs:
     - beest_kubernetes_test
@@ -930,7 +943,7 @@ beest_kubernetes_success_cleanup:
   <<: *beest_kubernetes_variables
   rules:
     - *kubernetes_ignore_rule
-    - *cluster_agent_on_success
+    - *v2_merge_train_on_success
     - when: never
   dependencies:
     - beest_kubernetes_test
