--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -960,9 +960,6 @@ beest_kubernetes_success_cleanup:
   - &localinstall_ignore_rule
     if: $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-localinstall]/
     when: never
-  - &localinstall_master_only_rule
-    if: ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master")
-    when: always
   - &localinstall_acceptance_rule
     if: $CI_COMMIT_MESSAGE =~ /\[molecule\-localinstall]/
     when: always
@@ -978,8 +975,8 @@ molecule_localinstall_create:
   <<: *molecule_create
   rules:
     - *localinstall_ignore_rule
-    - *localinstall_master_only_rule
     - *localinstall_acceptance_rule
+    - *merge_train_always
     - when: never
   variables:
     MOLECULE_SCENARIO: localinstall
@@ -989,8 +986,8 @@ molecule_localinstall_test:
   <<: *molecule_test
   rules:
     - *localinstall_ignore_rule
-    - *localinstall_master_only_rule
     - *localinstall_acceptance_rule
+    - *merge_train_on_success
     - when: never
   variables:
     MOLECULE_SCENARIO: localinstall
@@ -1008,8 +1005,8 @@ molecule_localinstall_failure_cleanup:
   <<: *molecule_destroy
   rules:
     - *localinstall_ignore_rule
-    - *localinstall_master_only_rule
     - *localinstall_acceptance_on_failure_rule
+    - *merge_train_on_failure
     - when: never
   needs:
     - molecule_localinstall_test
@@ -1022,8 +1019,8 @@ molecule_localinstall_success_cleanup:
   <<: *molecule_destroy
   rules:
     - *localinstall_ignore_rule
-    - *localinstall_master_only_rule
     - *localinstall_acceptance_on_success_rule
+    - *merge_train_on_success
     - when: never
   dependencies:
     - molecule_localinstall_test
@@ -1058,8 +1055,8 @@ molecule_secrets_create:
   <<: *molecule_create
   rules:
     - *secrets_ignore_rule
-    - *secrets_master_only_rule
     - *secrets_acceptance_rule
+    - *merge_train_always
     - when: never
   variables:
     MOLECULE_SCENARIO: secrets
@@ -1069,8 +1066,8 @@ molecule_secrets_test:
   <<: *molecule_test
   rules:
     - *secrets_ignore_rule
-    - *secrets_master_only_rule
     - *secrets_acceptance_rule
+    - *merge_train_on_success
     - when: never
   variables:
     MOLECULE_SCENARIO: secrets
@@ -1087,8 +1084,8 @@ molecule_secrets_failure_cleanup:
   <<: *molecule_destroy
   rules:
     - *secrets_ignore_rule
-    - *secrets_master_only_rule
     - *secrets_acceptance_on_failure_rule
+    - *merge_train_on_failure
     - when: never
   needs:
     - molecule_secrets_test
@@ -1101,8 +1098,8 @@ molecule_secrets_success_cleanup:
   <<: *molecule_destroy
   rules:
     - *secrets_ignore_rule
-    - *secrets_master_only_rule
     - *secrets_acceptance_on_success_rule
+    - *merge_train_on_success
     - when: never
   dependencies:
     - molecule_secrets_test
