--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -591,23 +591,28 @@ pre_release_cluster_agent_image:
 
 # Merge train rules for agent v2
 .v2_merge_train_always: &v2_merge_train_always
-  - if: ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master")
+  # If the major version is 2, and it is the master branch or a tag, always execute this step
+  - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master")
     when: always
     allow_failure: false
+  # Else, if the major version is 2, and it is a merge train job, always execute this step
   - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_MERGE_REQUEST_EVENT_TYPE == "merge_train"
     when: always
     allow_failure: false
+  # Else, if the major version is 2, and there is a valid MR internal ID, manually execute this step
   - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_MERGE_REQUEST_IID
     when: manual
     allow_failure: true
+  # Else, if the major version is 2, and there is an open merge request (but no MR IID), never execute this step
   - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_OPEN_MERGE_REQUESTS
     when: never
+  # Else, if the major version is 2, and code was committed to a branch, manually execute this step
   - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_COMMIT_BRANCH
     when: manual
     allow_failure: true
 
 .v2_merge_train_on_success: &v2_merge_train_on_success
-  - if: ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master")
+  - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master")
     when: on_success
     allow_failure: false
   - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_MERGE_REQUEST_EVENT_TYPE == "merge_train"
@@ -616,7 +621,7 @@ pre_release_cluster_agent_image:
   - *v2_merge_train_common
 
 .v2_merge_train_on_failure: &v2_merge_train_on_failure
-  - if: ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master")
+  - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master")
     when: on_failure
     allow_failure: false
   - if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_MERGE_REQUEST_EVENT_TYPE == "merge_train"
