--- a/beest/Makefile
+++ b/beest/Makefile
@@ -2,7 +2,6 @@
 
 SHELL         := /bin/bash
 .DEFAULT_GOAL := start
-UNAME_S ?= Linux
 
 UID    ?= $(shell id -u)
 GID    ?= $(shell id -g)
@@ -10,6 +9,7 @@ GID    ?= $(shell id -g)
 OS := $(shell uname)
 ifeq ($(OS),Linux)
     DOCKER_GID ?= $(shell stat -c '%g' /var/run/docker.sock)
+    UNAME_S = Linux
 endif
 ifeq ($(OS),Darwin)
 	DOCKER_GID ?= $(shell stat -f '%g' /var/run/docker.sock)
@@ -19,7 +19,6 @@ endif
 GIT_BRANCH = $(shell git rev-parse --abbrev-ref HEAD)
 BRANCH = $(shell echo ${GIT_BRANCH} | cut -d'/' -f 2- | tr [:upper:] [:lower:])
 
-STACKSTATE_BRANCH            ?= master
 MAJOR_VERSION                ?= 2
 STS_AWS_TEST_BUCKET          ?= stackstate-agent-2-test
 STS_DOCKER_TEST_REPO         ?= stackstate-agent-2-test
@@ -30,7 +29,6 @@ KEEPER_IMAGE       = beest:${BRANCH}
 KEEPER_CONTAINER   = beest
 VOLUME_GO_PKG_NAME = beest-go-volume
 DOCKER_ENV		   = --env AGENT_CURRENT_BRANCH=${GIT_BRANCH} \
-					 --env STACKSTATE_BRANCH=${STACKSTATE_BRANCH} \
 					 --env MAJOR_VERSION=${MAJOR_VERSION} \
 					 --env STS_AWS_TEST_BUCKET=${STS_AWS_TEST_BUCKET} \
 					 --env STS_DOCKER_TEST_REPO=${STS_DOCKER_TEST_REPO} \
