--- a/beest/sut/bees/tasks/kubectl/create-secret-for-private-docker.yml
+++ b/beest/sut/bees/tasks/kubectl/create-secret-for-private-docker.yml
@@ -16,6 +16,6 @@
       data:
         .dockerconfigjson: "{{ docker_registry_key | to_json | b64encode }}"
       metadata:
-        name: docker-registry-key
+        name: "docker-registry-key"
         namespace: "{{ namespace }}"
-      type: kubernetes.io/dockerconfigjson
+      type: "kubernetes.io/dockerconfigjson"
