--- a/beest/sut/bees/tasks/kubectl/create-secret-for-private-docker.yml
+++ b/beest/sut/bees/tasks/kubectl/create-secret-for-private-docker.yml
@@ -1,5 +1,21 @@
 ---
+- name: Set docker registry key fact
+  set_fact:
+    docker_registry_key:
+      auths:
+        quay.io:
+          auth: "{{ ':'.join((quay_user, quay_password)) | b64encode }}"
+
 - name: Create secret to allow pulling from private docker registry
-  shell: kubectl --context={{ kubecontext }} get secret docker-registry-key || kubectl --context={{ kubecontext }} create secret generic docker-registry-key --from-file=.dockerconfigjson="{{ ansible_user_dir }}/.docker/config.json" --type=kubernetes.io/dockerconfigjson
-  environment:
-    KUBECONFIG: "{{ kubeconfig }}"
+  kubernetes.core.k8s:
+    context: "{{ kubecontext }}"
+    state: present
+    resource_definition:
+      apiVersion: v1
+      kind: Secret
+      data:
+        .dockerconfigjson: "{{ docker_registry_key | to_json | b64encode }}"
+      metadata:
+        name: "docker-registry-key"
+        namespace: "{{ namespace }}"
+      type: "kubernetes.io/dockerconfigjson"
