--- a/beest/Makefile
+++ b/beest/Makefile
@@ -9,15 +9,16 @@ GID    ?= $(shell id -g)
 OS := $(shell uname)
 ifeq ($(OS),Linux)
     DOCKER_GID ?= $(shell stat -c '%g' /var/run/docker.sock)
+    UNAME_S = Linux
 endif
 ifeq ($(OS),Darwin)
-	DOCKER_GID ?= $(shell stat -f '%g' /var/run/docker.sock)
+    DOCKER_GID ?= $(shell stat -f '%g' /var/run/docker.sock)
+    UNAME_S = Darwin
 endif
 
 GIT_BRANCH = $(shell git rev-parse --abbrev-ref HEAD)
 BRANCH = $(shell echo ${GIT_BRANCH} | cut -d'/' -f 2- | tr [:upper:] [:lower:])
 
-STACKSTATE_BRANCH            ?= master
 MAJOR_VERSION                ?= 2
 STS_AWS_TEST_BUCKET          ?= stackstate-agent-2-test
 STS_DOCKER_TEST_REPO         ?= stackstate-agent-2-test
@@ -28,7 +29,6 @@ KEEPER_IMAGE       = beest:${BRANCH}
 KEEPER_CONTAINER   = beest
 VOLUME_GO_PKG_NAME = beest-go-volume
 DOCKER_ENV		   = --env AGENT_CURRENT_BRANCH=${GIT_BRANCH} \
-					 --env STACKSTATE_BRANCH=${STACKSTATE_BRANCH} \
 					 --env MAJOR_VERSION=${MAJOR_VERSION} \
 					 --env STS_AWS_TEST_BUCKET=${STS_AWS_TEST_BUCKET} \
 					 --env STS_DOCKER_TEST_REPO=${STS_DOCKER_TEST_REPO} \
@@ -40,6 +40,7 @@ build:
 		--build-arg UID=${UID} \
 		--build-arg GID=${GID} \
 		--build-arg DOCKER_GID=${DOCKER_GID} \
+		--build-arg UNAME_S=${UNAME_S} \
 		-f ./keeper.dockerfile .
 
 start: build
