STAC-15606 CICD update to build protected branches in the same way as tags.

--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -862,7 +862,7 @@ molecule_kubernetes_success_cleanup:
     if: $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-localinstall]/
     when: never
   - &localinstall_master_only_rule
-    if: ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master")
+    if: ($CI_COMMIT_TAG || $CI_COMMIT_REF_PROTECTED)
     when: always
   - &localinstall_acceptance_rule
     if: $CI_COMMIT_MESSAGE =~ /\[molecule\-localinstall]/
@@ -942,7 +942,7 @@ molecule_localinstall_success_cleanup:
     if: $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-compose]/
     when: never
   - &secrets_master_only_rule
-    if: ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master")
+    if: ($CI_COMMIT_TAG || $CI_COMMIT_REF_PROTECTED)
     when: always
   - &secrets_acceptance_rule
     if: $CI_COMMIT_MESSAGE =~ /\[molecule\-compose]/
