Introduce explicit run-id argument to beest. It can be passed tru env var or cli flag. Use run-id and scenario as terraform workspace.

--- a/beest/envrc.example
+++ b/beest/envrc.example
@@ -11,4 +11,6 @@ export AWS_PROFILE=stackstate-sandbox
 export quay_user=TBD
 export quay_password=TBD
 
+export RUN_ID=$AGENT_CURRENT_BRANCH
+
 export STACKSTATE_BRANCH=master
