--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -737,6 +737,7 @@ pre_release_cluster_agent_image:
     - export AWS_SECRET_ACCESS_KEY=${MOLECULE_AWS_SECRET_ACCESS_KEY}
     - export PATH=/go/src/app:${PATH}
     - export AGENT_CURRENT_BRANCH=$CI_COMMIT_REF_NAME
+    - export RUN_ID=$CI_COMMIT_REF_NAME
     - export STACKSTATE_BRANCH=master
   after_script: # artifacts do not work with absolute path, so we move them inside the build dir
     - mv /go/src/app/terraform.log $CI_PROJECT_DIR/beest/ || true
