better variable placeholders in default config

--- a/pkg/config/config_template.yaml
+++ b/pkg/config/config_template.yaml
@@ -4,10 +4,10 @@
 #########################
 
 # The host of the StackState receiver to send Agent data to
-sts_url: http://localhost
+sts_url:  https://<YOUR_STACKSTATE_URL>
 
 # The StackState API key to associate your Agent's data with your organization.
-api_key: API_KEY
+api_key: <YOUR_STACKSTATE_API_KEY>
 
 # If you need a proxy to connect to the Internet, provide it here (default:
 # disabled). You can use the 'no_proxy' list to specify hosts that should
