--- a/beest/sut/yards/eks-receiver/prepare.yml
+++ b/beest/sut/yards/eks-receiver/prepare.yml
@@ -7,7 +7,6 @@
 
 - name: Prepare Kubernetes Cluster
   hosts: localhost
-  connection: local
-  gather_facts: true
+  gather_facts: false
   tasks:
     - include_tasks: ../../bees/eks_agent.yml
