STAC-15753 Add containerd tests

--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -902,61 +902,115 @@ molecule_integrations_success_cleanup:
     if: $MAJOR_VERSION == $PRIMARY_MAJOR_VERSION && $CI_COMMIT_MESSAGE =~ /\[beest\-/ && $CI_COMMIT_MESSAGE !~ /\[beest\-kubernetes]/
     when: never
 
-.beest_kubernetes_variables: &beest_kubernetes_variables
+.beest_k8s_dockerd_variables: &beest_k8s_dockerd_variables
   variables:
     BEEST_SCENARIO: dockerd-eks
     BEEST_TEST_GROUP: k8s
 
-beest_kubernetes_create:
+.beest_k8s_containerd_variables: &beest_k8s_containerd_variables
+  variables:
+    BEEST_SCENARIO: containerd-eks
+    BEEST_TEST_GROUP: k8s
+
+beest_k8s_dockerd_create:
   <<: *beest
   <<: *beest_create
-  <<: *beest_kubernetes_variables
+  <<: *beest_k8s_dockerd_variables
   rules:
     - *kubernetes_ignore_rule
     - *v2_merge_train_always
 
-beest_kubernetes_test:
+beest_k8s_containerd_create:
+  <<: *beest
+  <<: *beest_create
+  <<: *beest_k8s_containerd_variables
+  rules:
+    - *kubernetes_ignore_rule
+    - *v2_merge_train_always
+
+beest_k8s_dockerd_test:
   <<: *beest
   <<: *beest_test
-  <<: *beest_kubernetes_variables
+  <<: *beest_k8s_dockerd_variables
   rules:
     - *kubernetes_ignore_rule
     - *v2_merge_train_on_success
     - when: never
   dependencies:
-    - beest_kubernetes_create
+    - beest_k8s_dockerd_create
   needs:
-    - beest_kubernetes_create
+    - beest_k8s_dockerd_create
     - pre_release_cluster_agent_image
     - pre_release_main_agent_image
 
-beest_kubernetes_failure_cleanup:
+beest_k8s_containerd_test:
+  <<: *beest
+  <<: *beest_test
+  <<: *beest_k8s_containerd_variables
+  rules:
+    - *kubernetes_ignore_rule
+    - *v2_merge_train_on_success
+    - when: never
+  dependencies:
+    - beest_k8s_containerd_create
+  needs:
+    - beest_k8s_containerd_create
+    - pre_release_cluster_agent_image
+    - pre_release_main_agent_image
+
+beest_k8s_dockerd_failure_cleanup:
   <<: *beest
   <<: *beest_destroy
-  <<: *beest_kubernetes_variables
+  <<: *beest_k8s_dockerd_variables
   rules:
     - *kubernetes_ignore_rule
     - *v2_merge_train_on_failure
     - when: never
   needs:
-    - beest_kubernetes_test
-    - beest_kubernetes_create
+    - beest_k8s_dockerd_test
+    - beest_k8s_dockerd_create
 
-beest_kubernetes_success_cleanup:
+beest_k8s_containerd_failure_cleanup:
   <<: *beest
   <<: *beest_destroy
-  <<: *beest_kubernetes_variables
+  <<: *beest_k8s_containerd_variables
+  rules:
+    - *kubernetes_ignore_rule
+    - *v2_merge_train_on_failure
+    - when: never
+  needs:
+    - beest_k8s_containerd_test
+    - beest_k8s_containerd_create
+
+beest_k8s_dockerd_success_cleanup:
+  <<: *beest
+  <<: *beest_destroy
+  <<: *beest_k8s_dockerd_variables
   rules:
     - *kubernetes_ignore_rule
     - *v2_merge_train_on_success
     - when: never
   dependencies:
-    - beest_kubernetes_test
-    - beest_kubernetes_create
+    - beest_k8s_dockerd_test
+    - beest_k8s_dockerd_create
   needs:
-    - beest_kubernetes_test
-    - beest_kubernetes_create
+    - beest_k8s_dockerd_test
+    - beest_k8s_dockerd_create
 
+beest_k8s_containerd_success_cleanup:
+  <<: *beest
+  <<: *beest_destroy
+  <<: *beest_k8s_containerd_variables
+  rules:
+    - *kubernetes_ignore_rule
+    - *v2_merge_train_on_success
+    - when: never
+  dependencies:
+    - beest_k8s_containerd_test
+    - beest_k8s_containerd_create
+  needs:
+    - beest_k8s_containerd_test
+    - beest_k8s_containerd_create
 
 # Job Seq: Molecule
 # Type: localinstall
